--- a/app/src/main/res/layout/activity_dialogo_lista_de_administrador.xml
+++ b/app/src/main/res/layout/activity_dialogo_lista_de_administrador.xml
@@ -130,7 +130,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="AukdeDelivery"
+                    android:text="Aukdeliver"
                     android:textSize="16sp"
                     android:textColor="#fff"
                     />
