--- a/app/src/main/res/values/categoria_comidas.xml
+++ b/app/src/main/res/values/categoria_comidas.xml
@@ -7,7 +7,8 @@
         <item>Comida Oriental</item>
         <item>Comida Rápida</item>
         <item>Pizzas</item>
-        <item>Pastelería y Repostería</item>
         <item>Menú de Casa</item>
+        <item>Pastelería y Repostería</item>
+        <item>Heladerías</item>
     </string-array>
 </resources>
