--- a/app/src/main/res/layout/activity_agregar_producto_tortas.xml
+++ b/app/src/main/res/layout/activity_agregar_producto_tortas.xml
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="wrap_content"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:hint="Tamaño"
                         android:layout_gravity="center"
@@ -126,7 +126,45 @@
                     android:spinnerMode="dialog"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/disponibilidad"/>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="wrap_content"
+                    android:textColorHint="#000"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="6dp"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="170dp"
+                        android:layout_height="wrap_content"
+                        android:hint="Disponibilidad"
+                        android:layout_gravity="center"
+                        android:textColorHint="#000"
+                        android:id="@+id/edtDisp"
+                        android:inputType="text">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Spinner
+                    android:id="@+id/spinnerDispo"
+                    android:spinnerMode="dialog"
+                    android:layout_gravity="center"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
