--- a/app/src/main/res/layout/row_lista_administrador.xml
+++ b/app/src/main/res/layout/row_lista_administrador.xml
@@ -51,7 +51,7 @@
 
             <LinearLayout
                 android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:id="@+id/linearContenedorExtra"
                 android:layout_height="wrap_content">
@@ -75,7 +75,7 @@
 
             <LinearLayout
                 android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
 
@@ -98,7 +98,7 @@
 
             <LinearLayout
                 android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
 
@@ -121,7 +121,7 @@
 
             <LinearLayout
                 android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
                 <TextView
@@ -142,7 +142,7 @@
 
             <LinearLayout
                 android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
