--- a/app/src/main/res/layout/activity_editar_administrador.xml
+++ b/app/src/main/res/layout/activity_editar_administrador.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Editar_Administrador">
+    tools:context=".paquetes.Actividades.Usuarios.EditarAdministrador">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -52,34 +52,6 @@
         </com.github.florent37.shapeofview.shapes.CutCornerView>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="invisible"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="#CD1300"
-                android:id="@+id/idEditAdministrador"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:fontFamily="@font/futura"
-                android:textSize="14sp"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="#CD1300"
-                android:id="@+id/idEditPedidoAdministrador"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:fontFamily="@font/futura"
-                android:textSize="14sp"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_margin="5dp"
@@ -91,6 +63,275 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:id="@+id/scroll">
+                <GridLayout
+                    android:columnCount="1"
+                    android:columnOrderPreserved="false"
+                    android:rowCount="2"
+                    android:padding="5dp"
+                    android:alignmentMode="alignMargins"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text="Descripción del Administrador"
+                        android:textColor="#000"
+                        android:gravity="center"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/futura"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_height="wrap_content"/>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:gravity="center|bottom"
+                        android:layout_height="wrap_content">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_height="200dp"
+                            android:id="@+id/myPhotoAdministrador"
+                            android:layout_gravity="center"
+                            app:civ_border_color="#E7E7E7"
+                            app:civ_border_width="2dp"
+                            android:backgroundTint="#CACACA"
+                            android:clickable="true"
+                            android:background="@drawable/ic_admin"
+                            android:foreground="@drawable/selecion"
+                            android:layout_width="200dp" />
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/fotodefaultAdministrador"
+                            android:layout_width="70dp"
+                            android:layout_marginLeft="130dp"
+                            android:layout_marginTop="130dp"
+                            android:layout_height="70dp"
+                            android:layout_alignBottom="@id/fotodefaultAdministrador"
+                            android:layout_marginBottom="0dp"
+                            android:background="@drawable/camera"
+                            android:clickable="true"
+                            android:foreground="@drawable/selecion"
+                            app:civ_border_color="#B4B4B4"
+                            app:civ_border_width="2dp" />
+
+                    </RelativeLayout>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="6dp"
+                        android:backgroundTint="#F4F4F4"
+                        app:cardCornerRadius="32dp"
+                        android:layout_margin="12dp"
+                        >
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="16dp">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:src="@drawable/detalle_nombre"
+                                        android:layout_height="50dp"/>
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="Nombre : "
+                                        android:textSize="14sp"
+                                        android:textColor="#000"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_marginLeft="10dp"
+                                        android:layout_height="wrap_content"/>
+
+                                    <EditText
+                                        android:layout_width="match_parent"
+                                        android:hint="Nombre"
+                                        android:textSize="14sp"
+                                        android:inputType="textCapSentences"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:id="@+id/edtNombreAdministrador"
+                                        android:layout_height="wrap_content"/>
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_height="wrap_content">
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:src="@drawable/detalle_apellido"
+                                        android:layout_height="50dp"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="Apellido : "
+                                        android:textSize="14sp"
+                                        android:textColor="#000"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="5dp"/>
+
+                                    <EditText
+                                        android:layout_width="match_parent"
+                                        android:hint="Apellido"
+                                        android:id="@+id/edtApellidoAdministrador"
+                                        android:textSize="14sp"
+                                        android:inputType="textCapSentences"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"/>
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_height="wrap_content">
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:src="@drawable/detalle_correo"
+                                        android:layout_height="50dp"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="Correo : "
+                                        android:textSize="14sp"
+                                        android:textColor="#000"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="5dp"/>
+
+                                    <EditText
+                                        android:layout_width="match_parent"
+                                        android:hint="Correo Electronico"
+                                        android:id="@+id/edtCorreoAdministrador"
+                                        android:textSize="14sp"
+                                        android:inputType="textCapSentences"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_height="wrap_content">
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:src="@drawable/detalle_dni"
+                                        android:layout_height="50dp"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="Dni : "
+                                        android:textSize="14sp"
+                                        android:textColor="#000"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="5dp"/>
+
+                                    <EditText
+                                        android:layout_width="match_parent"
+                                        android:hint="Dni"
+                                        android:id="@+id/edtDniAdministrador"
+                                        android:textSize="14sp"
+                                        android:inputType="textCapSentences"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"/>
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="vertical"
+                                android:layout_height="wrap_content">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_height="wrap_content">
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:src="@drawable/detalle_telefono"
+                                        android:layout_height="50dp"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="Telefono : "
+                                        android:textSize="14sp"
+                                        android:textColor="#000"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="5dp"/>
+
+                                    <EditText
+                                        android:layout_width="match_parent"
+                                        android:hint="Telefono"
+                                        android:id="@+id/edtTelefonoAdministrador"
+                                        android:textSize="14sp"
+                                        android:inputType="textCapSentences"
+                                        android:textStyle="bold"
+                                        android:fontFamily="@font/futura"
+                                        android:layout_height="wrap_content"/>
+                                </LinearLayout>
+                            </LinearLayout>
+
+
+                            <Button
+                                android:layout_marginTop="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Editar Producto"
+                                android:textColor="#ffffff"
+                                android:background="@drawable/redondo"
+                                android:id="@+id/btnEditarAdministrador"
+                                android:backgroundTint="@drawable/btn_background_negro"/>
+
+                        </LinearLayout>
+
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </GridLayout>
 
 
             </ScrollView>
