--- a/app/src/main/res/layout/row_lista_aukdelivery.xml
+++ b/app/src/main/res/layout/row_lista_aukdelivery.xml
@@ -53,7 +53,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_height="wrap_content">
 
@@ -76,7 +76,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_height="wrap_content">
 
@@ -99,7 +99,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_height="wrap_content">
 
@@ -122,7 +122,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_height="wrap_content">
                     <TextView
@@ -143,7 +143,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
@@ -168,7 +168,7 @@
 
                 <LinearLayout
                     android:layout_marginLeft="20dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
