--- a/app/src/main/res/layout/activity_detalle_administrador.xml
+++ b/app/src/main/res/layout/activity_detalle_administrador.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:elevation="16dp"
+            android:id="@+id/btnEditarPerfilAdmin"
             android:src="@drawable/ic_check_white_24dp"
             android:layout_gravity="right"
             android:layout_marginTop="-30dp"
@@ -230,16 +231,40 @@
 
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="horizontal"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:id="@+id/linearEditarPerfilAdmin"
+                                android:layout_height="wrap_content">
                             <Button
-                                android:layout_width="220dp"
+                                android:layout_width="match_parent"
+                                android:layout_marginRight="5dp"
                                 android:layout_height="wrap_content"
-                                android:text="Editar Perfil"
+                                android:text="Editar Perfil?"
                                 android:textColor="#ffffff"
                                 android:layout_marginTop="10dp"
                                 android:background="@drawable/redondo"
                                 android:id="@+id/btnEditarAdmin"
                                 android:backgroundTint="@drawable/btn_background_negro"/>
+                            </LinearLayout>
 
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_height="wrap_content"
+                                android:text="Ver reportes"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="#ffffff"
+                                android:layout_marginTop="10dp"
+                                android:background="@drawable/redondo"
+                                android:backgroundTint="@drawable/btn_background_negro"/>
+                        </LinearLayout>
                         </LinearLayout>
 
             </ScrollView>
